# leximpact-socio-fiscal-api

./: .gitignore  README.md  README.rst  example.env  pyproject.toml  setup.cfg
data/: DCT.csv
leximpact_socio_fiscal_api/: config.py  main.py  parameters.py  server.py  variables.py
leximpact_socio_fiscal_api/database/: schemas.py
leximpact_socio_fiscal_api/routers/: csg.py  parameters.py  simulations.py  variables.py  waterfall.py
leximpact_socio_fiscal_api/scripts/: serve.py
tests/: test_leximpact_socio_fiscal_api.py
