[tool.poetry]
name = "leximpact-socio-fiscal-api"
version = "0.1.0"
description = "_HTTP + WebSocket API for OpenFisca"
license = "AGPL-3.0-or-later"
authors = ["Emmanuel Raviart <emmanuel@raviart.com>"]
readme = "README.md"
homepage = "https://simulateur-socio-fisca.leximpact.dev/"
repository = "https://github.com/leximpact/leximpact-socio-fiscal-api"

[tool.poetry.dependencies]
python = "^3.9"
OpenFisca-France = "^51.7.1"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.6"
flake8 = "^3.9.0"

[tool.poetry.scripts]
leximpact_socio-fiscal_api = "leximpact_socio_fiscal_api.scripts.serve:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
